--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                 params: null,
                 query: null,
                 body: {
-                    customerId: "60f71170b5d1fd0004d5d515",
+                    customerId: "60f25bb8c61ad04fdc443421",
                     location: "example",
                     paymentMethod: "example",
                     cancelationFee: "example",
@@ -785,7 +785,7 @@
 
             $.ajax({
                 type: "POST",
-                url: selected.link,
+                url: link,
                 data: JSON.stringify(selected.body),
                 contentType: "application/json",
                 dataType: "json",
