--- a/index.html
+++ b/index.html
@@ -536,14 +536,14 @@
             {
                 type: "get",
                 link: "https://service-backend-web.herokuapp.com/proposals",
-                params: { id: "example", type: "example" },
+                params: { id: "60f71170b5d1fd0004d5d515", type: "false" },
                 query: null,
                 body: null
             },
             {
                 type: "get",
                 link: "https://service-backend-web.herokuapp.com/proposals",
-                params: { id: "example" },
+                params: { id: "60f71170b5d1fd0004d5d515" },
                 query: null,
                 body: null
             },
