--- a/index.html
+++ b/index.html
@@ -5,369 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta content="text/html; charset=UTF-8; X-Content-Type-Options=nosniff" http-equiv="Content-Type" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="/public/style.css">
     <script src="https://kit.fontawesome.com/f281791205.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 
-    <style>
-        .content {
-            width: 70%;
-            margin: 0 auto;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        body {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-            /* background-color: seashell; */
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center center;
-        }
-
-        #row {
-            display: flex !important;
-            flex-direction: row;
-            flex-wrap: nowrap;
-            padding: 5px;
-            width: 100%;
-            justify-content: start;
-            align-items: center;
-        }
-
-        a:link {
-            text-decoration: none;
-            color: black
-        }
-
-        a:visited {
-            text-decoration: none;
-            color: black
-        }
-
-        a:hover {
-            text-decoration: none;
-            color: black
-        }
-
-        a:active {
-            text-decoration: none;
-            color: black
-        }
-
-        .p-row {
-            border-bottom: 1px solid gray;
-            display: flex;
-            width: 700px;
-            flex-direction: column;
-            margin-bottom: 2rem;
-        }
-
-        #row-i {
-            width: 86%;
-            justify-self: flex-end;
-            align-self: flex-end;
-        }
-
-        /* #row #link { */
-        /* margin-right: 0.5rem; */
-        /* } */
-
-        #row-i #img {
-            width: 500px;
-            height: 500px;
-        }
-
-        #row:hover {
-            /* background-color: seashell; */
-            cursor: pointer;
-        }
-
-        #get {
-            padding: 2px 15px;
-            background-color: rgb(3, 75, 231);
-            border-radius: 10px;
-            color: #fff;
-            margin-right: 2rem;
-        }
-
-        #post {
-            padding: 2px 15px;
-            background-color: rgb(4, 170, 4);
-            border-radius: 10px;
-            color: #fff;
-            margin-right: 2rem;
-        }
-
-        #put {
-            padding: 2px 15px;
-            background-color: gray;
-            border-radius: 10px;
-            color: #fff;
-            margin-right: 2rem;
-        }
-
-        #delete {
-            padding: 2px 15px;
-            background-color: rgb(216, 21, 21);
-            border-radius: 10px;
-            color: #fff;
-            margin-right: 2rem;
-        }
-
-        #api-list {
-
-            border-radius: 10px;
-            height: 150px;
-            /* width: 700px; */
-            width: 100%;
-            padding: 1rem;
-            background-color: rgb(230, 228, 228);
-            overflow-y: auto;
-            box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-        }
-
-        ::-webkit-scrollbar {
-            width: 10px;
-        }
-
-        ::-webkit-scrollbar-track {
-            background: #f1f1f1;
-        }
-
-        ::-webkit-scrollbar-thumb {
-            background: #888;
-            border-radius: 15px;
-        }
-
-        ::-webkit-scrollbar-thumb:hover {
-            background: #555;
-        }
-
-        #request {
-            width: 100%;
-            display: flex;
-            flex-direction: row;
-            flex-wrap: nowrap;
-            justify-content: space-between;
-            margin-top: 5rem;
-            height: 600px;
-        }
-
-        #fromjson {
-            width: 40%;
-            border-radius: 20px;
-            box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-            background-color: rgb(230, 228, 228);
-            display: flex;
-            flex-direction: column;
-            flex-wrap: nowrap;
-            justify-content: center;
-            align-content: center;
-            text-align: start;
-            height: 100%;
-        }
-
-        #fromjson-form {
-            height: 100%;
-            overflow-y: auto;
-            padding: 2rem;
-
-        }
-
-        #fromjson label {
-
-            margin-right: 1rem;
-
-        }
-
-        input:focus {
-            outline: none !important;
-            box-shadow: 0 0 10px #719ECE;
-        }
-
-        #test {
-            height: 40px;
-            padding: 0.5rem 2rem;
-            border-radius: 15px;
-            background-color: tomato;
-            box-shadow: 0px 5px 5px #888888;
-            border: transparent;
-
-        }
-
-        #tojson {
-            width: 40%;
-            border-radius: 20px;
-            box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-            background-color: rgb(230, 228, 228);
-            display: flex;
-            flex-direction: column;
-            flex-wrap: nowrap;
-            align-content: center;
-            height: 100%;
-            overflow-y: auto;
-            padding: 2rem;
-        }
-
-        #tojson label {
-
-            margin-right: 1rem;
-
-        }
-
-        #flex-box {
-            display: flex;
-            flex-direction: row;
-            margin-left: 3.5rem;
-        }
-
-        #flex {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-        }
-
-        #flex-box-error {
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-            margin-left: 1.5rem;
-        }
-
-        input {
-            border-radius: 10px;
-            border: none;
-        }
-
-        .lds-roller {
-            display: inline-block;
-            margin: 0 auto;
-            position: relative;
-            width: 80px;
-            height: 80px;
-        }
-
-        .lds-roller div {
-            animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-            transform-origin: 40px 40px;
-        }
-
-        .lds-roller div:after {
-            content: " ";
-            display: block;
-            position: absolute;
-            width: 7px;
-            height: 7px;
-            border-radius: 50%;
-            background: black;
-            margin: -4px 0 0 -4px;
-        }
-
-        .lds-roller div:nth-child(1) {
-            animation-delay: -0.036s;
-        }
-
-        .lds-roller div:nth-child(1):after {
-            top: 63px;
-            left: 63px;
-        }
-
-        .lds-roller div:nth-child(2) {
-            animation-delay: -0.072s;
-        }
-
-        .lds-roller div:nth-child(2):after {
-            top: 68px;
-            left: 56px;
-        }
-
-        .lds-roller div:nth-child(3) {
-            animation-delay: -0.108s;
-        }
-
-        .lds-roller div:nth-child(3):after {
-            top: 71px;
-            left: 48px;
-        }
-
-        .lds-roller div:nth-child(4) {
-            animation-delay: -0.144s;
-        }
-
-        .lds-roller div:nth-child(4):after {
-            top: 72px;
-            left: 40px;
-        }
-
-        .lds-roller div:nth-child(5) {
-            animation-delay: -0.18s;
-        }
-
-        .lds-roller div:nth-child(5):after {
-            top: 71px;
-            left: 32px;
-        }
-
-        .lds-roller div:nth-child(6) {
-            animation-delay: -0.216s;
-        }
-
-        .lds-roller div:nth-child(6):after {
-            top: 68px;
-            left: 24px;
-        }
-
-        .lds-roller div:nth-child(7) {
-            animation-delay: -0.252s;
-        }
-
-        .lds-roller div:nth-child(7):after {
-            top: 63px;
-            left: 17px;
-        }
-
-        .lds-roller div:nth-child(8) {
-            animation-delay: -0.288s;
-        }
-
-        .lds-roller div:nth-child(8):after {
-            top: 56px;
-            left: 12px;
-        }
-
-        @keyframes lds-roller {
-            0% {
-                transform: rotate(0deg);
-            }
-
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-
-
-        .fa {
-            margin-right: 0.5rem;
-        }
-
-        .fa:hover {
-            cursor: pointer;
-        }
-
-        .padding-left {
-            padding-left: 1.5rem;
-        }
-
-        .fa-file {
-            padding-left: 3rem;
-        }
-    </style>
 
     <title>Document</title>
 
@@ -375,7 +19,7 @@
 
 <body>
 
-    <img src="image/logo.png" alt="">
+    <img id="m-logo" src="image/logo.png" alt="">
     <div class="content">
 
         <div id="api-list">
