update base url

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- <div id="row">
                 <div id="get">GET</div>
                 <a
-                    href="https://service-backend-web.herokuapp.com/users">https://service-backend-web.herokuapp.com/users</a>
+                    href="https://servicify-service-web.onrender.com/users">https://servicify-service-web.onrender.com/users</a>
 
                 <div class="fa fa-check" aria-hidden="true"></div>
             </div> -->
@@ -52,35 +52,35 @@
         var list = [
             {
                 type: "get",
-                link: "https://service-backend-web.herokuapp.com/users",
+                link: "https://servicify-service-web.onrender.com/users",
                 query: null,
                 params: null,
                 body: null
             },
             {
                 type: "get",
-                link: "https://service-backend-web.herokuapp.com/users/categories",
+                link: "https://servicify-service-web.onrender.com/users/categories",
                 query: null,
                 params: null,
                 body: null
             },
             {
                 type: "post",
-                link: "https://service-backend-web.herokuapp.com/users/login/auth",
+                link: "https://servicify-service-web.onrender.com/users/login/auth",
                 query: null,
                 params: null,
                 body: { email: 'example@gmail.com', password: '123' }
             },
             {
                 type: "post",
-                link: "https://service-backend-web.herokuapp.com/users/signup/auth",
+                link: "https://servicify-service-web.onrender.com/users/signup/auth",
                 params: null,
                 query: null,
                 body: { email: 'example@gmail.com', password: '123', firstName: 'example', lastName: 'example', jobName: 'example', isServiceProvider: 'false' }
             },
             {
                 type: "put",
-                link: "https://service-backend-web.herokuapp.com/users",
+                link: "https://servicify-service-web.onrender.com/users",
                 query: null,
                 params: null,
                 params: { id: '60f25bb8c61ad04fdc443421' },
@@ -115,49 +115,49 @@
             },
             {
                 type: "get",
-                link: "https://service-backend-web.herokuapp.com/orders",
+                link: "https://servicify-service-web.onrender.com/orders",
                 params: null,
                 query: { id: "60f6e3cab5d1fd0004d5d502", type: "false" },
                 body: null
             },
             {
                 type: "put",
-                link: "https://service-backend-web.herokuapp.com/orders",
+                link: "https://servicify-service-web.onrender.com/orders",
                 params: { id: "60f6f802b5d1fd0004d5d511" },
                 query: null,
                 body: { status: "Accepted" }
             },
             {
                 type: "put",
-                link: "https://service-backend-web.herokuapp.com/orders/add_feedback",
+                link: "https://servicify-service-web.onrender.com/orders/add_feedback",
                 params: { id: "60f6f802b5d1fd0004d5d511" },
                 query: null,
                 body: { rate: "5", feedback: "good job" }
             },
             {
                 type: "get",
-                link: "https://service-backend-web.herokuapp.com/posts",
+                link: "https://servicify-service-web.onrender.com/posts",
                 params: null,
                 query: null,
                 body: null
             },
             {
                 type: "get",
-                link: "https://service-backend-web.herokuapp.com/posts",
+                link: "https://servicify-service-web.onrender.com/posts",
                 params: { _id: "610e1e8570d15a00041d892d" },
                 query: null,
                 body: null
             },
             {
                 type: "post",
-                link: "https://service-backend-web.herokuapp.com/posts",
+                link: "https://servicify-service-web.onrender.com/posts",
                 params: { _id: "610e1e8570d15a00041d892d" },
                 query: null,
                 body: { serviceProviderId: "60f71170b5d1fd0004d5d515", customerId: "610e1e8570d15a00041d892d", diagnosisFee: 50, paymentMethod: "cash", description: "example", steps: ["1", "2"] }
             },
             {
                 type: "post",
-                link: "https://service-backend-web.herokuapp.com/posts",
+                link: "https://servicify-service-web.onrender.com/posts",
                 params: null,
                 query: null,
                 body: {
@@ -172,56 +172,56 @@
             },
             {
                 type: "delete",
-                link: "https://service-backend-web.herokuapp.com/posts",
+                link: "https://servicify-service-web.onrender.com/posts",
                 params: { _id: "6119e1c7a24a34000427b820" },
                 query: null,
                 body: null
             },
             {
                 type: "get",
-                link: "https://service-backend-web.herokuapp.com/proposals",
+                link: "https://servicify-service-web.onrender.com/proposals",
                 params: { id: "60f71170b5d1fd0004d5d515", type: "false" },
                 query: null,
                 body: null
             },
             {
                 type: "get",
-                link: "https://service-backend-web.herokuapp.com/proposals",
+                link: "https://servicify-service-web.onrender.com/proposals",
                 params: { id: "60f71424b5d1fd0004d5d519" },
                 query: null,
                 body: null
             },
             {
                 type: "put",
-                link: "https://service-backend-web.herokuapp.com/proposals/accept",
+                link: "https://servicify-service-web.onrender.com/proposals/accept",
                 params: { id: "60f7147fb5d1fd0004d5d51a" },
                 query: null,
                 body: null
             },
             {
                 type: "put",
-                link: "https://service-backend-web.herokuapp.com/proposals/reject",
+                link: "https://servicify-service-web.onrender.com/proposals/reject",
                 params: { id: "60f7147fb5d1fd0004d5d51a" },
                 query: null,
                 body: null
             },
             {
                 type: "put",
-                link: "https://service-backend-web.herokuapp.com/proposals/cancel",
+                link: "https://servicify-service-web.onrender.com/proposals/cancel",
                 params: { id: "60f7147fb5d1fd0004d5d51a" },
                 query: null,
                 body: null
             },
             {
                 type: "get",
-                link: "https://service-backend-web.herokuapp.com/requests",
+                link: "https://servicify-service-web.onrender.com/requests",
                 params: null,
                 query: { id: "60f25bb8c61ad04fdc443421", type: "false" },
                 body: null
             },
             {
                 type: "post",
-                link: "https://service-backend-web.herokuapp.com/requests/create",
+                link: "https://servicify-service-web.onrender.com/requests/create",
                 params: null,
                 query: null,
                 body: {
@@ -236,7 +236,7 @@
             },
             {
                 type: "put",
-                link: "https://service-backend-web.herokuapp.com/requests",
+                link: "https://servicify-service-web.onrender.com/requests",
                 params: { id: "6119e7a6659e660004657ca4" },
                 query: null,
                 body: {
